--- a/apply.html
+++ b/apply.html
@@ -24,7 +24,8 @@
         }
       };
       xobj.onerror = function () {
-        //window.location.href = "https://www.uob.com.sg"
+        debugger;
+        window.location.href = "https://www.uob.com.sg";
       };
       xobj.send(data);
     }
