--- a/cv/cv.html
+++ b/cv/cv.html
@@ -776,12 +776,12 @@
                           <li class="description" >Over 10 years of experience in Analysis, Design, Development, Testing, and Production support domains of Banking, Financial and Healthcare domain using JavaScript/Java technologies.</li>
                           <li class="description" >Knowledge about Data Structures and Algorithms.</li>
                           <li class="description" >Excellent experience working with web technologies front end : Node JS, ReactJS, Redux, ES6 - Javascript, VUJS, Angular JS.</li>
-                          <li class="description" >basically experience React native </li>
+                          <li class="description" >Basically experience React native </li>
                           <li class="description" >Knowledge about HTML5, CSS, SASS, LESS, animation css </li>
                           <li class="description" >Webpack static module, Prettier, ESLint</li>
                           <li class="description" >Knowledge Git: git hub, bit bucket</li>
                           <li class="description" >Knowledge web security: Https, CORS, Cross-Site Scripting (XSS), SQL injection</li>
-                          <li class="description" >basically Type checker: TypeScript </li>
+                          <li class="description" >Basically Type checker: TypeScript </li>
                           <li class="description" >Strongly experience: npm tool</li>
                           <li class="description" >Server side: NodesJs, Express.js</li>
                           <li class="description" >Strongly knowledge RestFull, AJAX, fetch API, JSON, Bootstrap</li>
